[package]
name = "flight_checker"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clokwerk = "0.3"
lazy_static = "1"
reqwest={version="0.11", features=["blocking", "multipart"]}
serde = "1"
serde_derive = "1"
serde_json = "1"
termion = "1"
tokio = { version = "1.4.0", features = ["full"] }
